--- a/src/components/ToolListTemporalInfo/style.scss
+++ b/src/components/ToolListTemporalInfo/style.scss
@@ -1,6 +1,7 @@
 .temporal-info{
     #cal-heatmap{
         width:100%;
-        height: 250px;
+        margin-top: 50px;
+        margin-bottom: 15px;
     }
 }
