--- a/src/components/SeekLineGraph/template.html
+++ b/src/components/SeekLineGraph/template.html
@@ -1,3 +1,3 @@
 <div class="seekline-graph">
-    <canvas ref="canvas" class="seekline-graph" @click="onClick"></canvas>
+    <canvas ref="canvas" class="seekline-graph" @click="onClick" :style="{height:height}"></canvas>
 </div>
