--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,8 @@
 $base-font-size: 16px !default;
-$toolbar-color: #000;
+$toolbar-color: #2196f3;
+$toolbar-height: rem-calc(55px);
+$sidebar-width: 250px;
+
 /* GRID */
 $grid-desktop-columns: 12 !default;
 $grid-desktop-gutter: 16px !default;
